services/devops/deploy-controller/k8s/kaniko-git-build.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-deploy-controller
  namespace: holm
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: NotIn
            values:
            - openmediavault
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
    - "--dockerfile=/workspace/Dockerfile"
    - "--context=/workspace"
    - "--destination=registry.holm.svc.cluster.local:5000/deploy-controller:latest"
    - "--insecure"
    - "--skip-tls-verify"
    - "--cache=false"
    volumeMounts:
    - name: workspace
      mountPath: /workspace
  restartPolicy: Never
  volumes:
  - name: workspace
    emptyDir: {}
